<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/first_name"
        android:ems="10"
        android:id="@+id/editFirstName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/last_name"
        android:ems="10"
        android:id="@+id/editLastName"
        android:layout_below="@+id/editFirstName"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:ems="10"
        android:id="@+id/editEmail"
        android:layout_below="@+id/editLastName"
        android:layout_alignParentStart="true"
        android:editable="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editGender"
        android:layout_below="@+id/editEmail"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editEmail"
        android:text="@string/gender" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editMajor"
        android:layout_below="@+id/editGender"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editGender"
        android:text="@string/major"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_profile"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"
        android:onClick="updateProfile" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button"
        android:layout_alignParentEnd="true"
        android:onClick="cancel" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editOldPassword"
        android:layout_below="@+id/editMajor"
        android:layout_alignParentStart="true"
        android:singleLine="true"
        android:maxLines="1"
        android:hint="@string/old_password" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPassword"
        android:layout_below="@+id/editOldPassword"
        android:layout_alignParentStart="true"
        android:singleLine="true"
        android:maxLines="1"
        android:hint="@string/new_password" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editVerifyPassword"
        android:layout_below="@+id/editPassword"
        android:layout_alignParentStart="true"
        android:singleLine="true"
        android:maxLines="1"
        android:hint="@string/verify_new_password" />

</RelativeLayout>
