<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="activities.ProfileActivity">


    <ProgressBar
        android:id="@+id/edit_info_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/edit_info_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/first_name"
                    android:ems="10"
                    android:id="@+id/editFirstName"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/last_name"
                    android:ems="10"
                    android:id="@+id/editLastName"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/email"
                    android:ems="10"
                    android:id="@+id/editEmail"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/gender"
                    android:ems="10"
                    android:id="@+id/editGender"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/major"
                    android:ems="10"
                    android:id="@+id/editMajor"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:ems="10"
                android:id="@+id/editOldPassword"
                android:layout_alignParentStart="true"
                android:singleLine="true"
                android:hint="@string/old_password" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:ems="10"
                    android:id="@+id/editPassword"
                    android:layout_alignParentStart="true"
                    android:singleLine="true"
                    android:hint="@string/new_password" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:ems="10"
                    android:id="@+id/editVerifyPassword"
                    android:layout_alignParentStart="true"
                    android:singleLine="true"
                    android:hint="@string/verify_new_password" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/update_info_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/update_info"
                android:textStyle="bold"
                android:onClick="attemptWrite"
                />

            <Button
                android:id="@+id/cancel_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Cancel"
                android:textStyle="bold"
                android:onClick="cancel"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
